@@ -4,6 +4,7 @@ version 0.9.15:
 	* Plugin support enabled by default (oops)
 	* Some plugins built/installed by default
 	* Option to automagically check for new releases
+	* Ability to receive files (one-way file transfer)
 
 version 0.9.14:
 	* Numerous Fixes by G. Sumner Hayes (buffer over flow patches,
